--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "@react-navigation/stack": "^6.0.10",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
-    "react-native-svg": "^12.1.1"
+    "react-native-shared-element": "^0.8.3",
+    "react-native-svg": "^12.1.1",
+    "react-navigation-shared-element": "^3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
